# fmri

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindCaffe.cmake  FindGTK3.cmake  FindGlog.cmake  Findpng++.cmake
data/: default-brain.ini  default-main.ini  download_models.sh
data/models/: README.md
data/models/alexnet/: model-dedup.prototxt
data/models/caffenet/: model-dedup.prototxt
data/models/googlenet/: weights_url
data/models/vgg-16/: model-dedup.prototxt
data/models/vgg-19/: model-dedup.prototxt  weights_url
resources/: launcher.glade
src/: .gitignore  ActivityAnimation.cpp  ActivityAnimation.hpp  Animation.cpp  Animation.hpp  DummyLayerVisualisation.hpp  FlatLayerVisualisation.cpp  FlatLayerVisualisation.hpp  ImageInteractionAnimation.cpp  ImageInteractionAnimation.hpp  InputLayerVisualisation.cpp  LayerData.cpp  LayerData.hpp  LayerInfo.cpp  LayerInfo.hpp  LayerVisualisation.cpp  LayerVisualisation.hpp  Makefile  MultiImageVisualisation.cpp  MultiImageVisualisation.hpp  Options.cpp  Options.hpp  PNGDumper.cpp  PNGDumper.hpp  PoolingLayerAnimation.cpp  PoolingLayerAnimation.hpp  Range.hpp  Simulator.cpp  Simulator.hpp  Texture.cpp  Texture.hpp  camera.cpp  camera.hpp  glutils.cpp  glutils.hpp  main.cpp  shaders.hpp  utils.cpp  utils.hpp  visualisations.cpp  (+1 more)
src/common/: config_files.cpp  config_files.hpp
src/fmri/: ActivityAnimation.cpp  ActivityAnimation.hpp  Animation.cpp  Animation.hpp  Drawable.cpp  Drawable.hpp  DummyLayerVisualisation.hpp  FlatLayerVisualisation.cpp  FlatLayerVisualisation.hpp  ImageInteractionAnimation.cpp  ImageInteractionAnimation.hpp  InputLayerVisualisation.cpp  InputLayerVisualisation.hpp  LabelVisualisation.cpp  LabelVisualisation.hpp  LayerData.cpp  LayerData.hpp  LayerInfo.cpp  LayerInfo.hpp  LayerVisualisation.cpp  LayerVisualisation.hpp  MultiImageVisualisation.cpp  MultiImageVisualisation.hpp  Options.cpp  Options.hpp  PNGDumper.cpp  PNGDumper.hpp  PoolingLayerAnimation.cpp  PoolingLayerAnimation.hpp  RenderingState.cpp  RenderingState.hpp  Simulator.cpp  Simulator.hpp  Texture.cpp  Texture.hpp  camera.cpp  camera.hpp  glutils.cpp  glutils.hpp  main.cpp  (+4 more)
src/tools/: deinplace.cpp  launcher.cpp  launcher.hpp
tools/: Makefile  deinplace.py
